<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/meetingBody"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxWidth="5.0dip"
                android:minWidth="10.0dip"
                android:scrollHorizontally="false" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_marginTop="15dp"
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duedate"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button2"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/recommend" />

                <Button
                    android:id="@+id/button3"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add" 
                    android:onClick="addNewDate"/>

            </LinearLayout>

            <TableLayout
                style="@style/tableStyle"
                android:id="@+id/meetingDueDatesTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:layout_marginLeft="10dp">

            </TableLayout>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collaborators"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add" 
                    android:onClick="invitePeople"/>

            </LinearLayout>

            <TableLayout
                style="@style/tableStyle"
                android:id="@+id/receivers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:layout_marginLeft="10dp">

            </TableLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:ems="3"
                android:text="@string/plus" />

            <EditText
                android:id="@+id/meetingEstimate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/button1"
                android:ems="4"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/meetingEstimate"
                android:ems="3"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/estimate"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>

        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/button5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/done" 
            android:onClick="createMeetingRequest"/>

    </LinearLayout>

</ScrollView>