<?xml version="1.0" encoding="utf-8"?>
 
    

        
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bc"
    android:orientation="vertical" >

    
<ScrollView 
    android:id="@+id/ScrollViewParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    
    >

    <LinearLayout
        android:id="@+id/LinearLayoutTaskcrud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:layout_margin="10dp" 
        android:orientation="vertical"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/taskBody"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxWidth="5.0dip"
            android:minWidth="10.0dip"
            android:scrollHorizontally="false" >

        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/priority"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout 
         android:id="@+id/ratingBar1"
         android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:gravity="center_horizontal">
	     	<Button
	            android:id="@+id/rate_low"
	            android:layout_width="35dp"
	            android:layout_height="35dp"
	            android:background="@drawable/rate_low"
	             />
	     	<Button
	            android:id="@+id/rate_medium"
	            android:layout_width="35dp"
	            android:layout_marginLeft="30dp"
	            android:layout_height="35dp"
	            android:background="@drawable/rate_medium"
	             />
	        <Button
	            android:id="@+id/rate_high"
	            android:layout_width="35dp"
	            android:layout_height="35dp"
	            android:layout_marginLeft="30dp"
	            android:background="@drawable/rate_high"
	             />
        </LinearLayout>
        <TextView android:id="@+id/Rate_Statue"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text=""/>
        <!--
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dip"
                android:layout_weight="2"
                android:paddingTop="10dip"
                android:text="@string/estimate"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.example.widget.NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/datetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="@string/deadline"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/deadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:onClick="showDateDialog"
                android:text="@string/select_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" >

            <TextView
                android:id="@+id/textView06"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="Duration hrs."
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                
                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:ems="5"
                    android:inputType="numberDecimal" />

                
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutParticipants"
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:orientation="vertical"
            android:scrollbars="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal" >
                
                <TextView
                android:id="@+id/participants"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="Participants"
                android:layout_gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageButton
                    android:id="@+id/add_participants"
                    android:layout_width="10dp"
                    android:layout_height="25dp"
                    android:layout_weight="1.68"
                    android:background="@null"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:src="@android:drawable/ic_input_add" />
                
            </LinearLayout>

            <ListView
                android:id="@+id/months_list"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
        		android:layout_weight="1" >
            </ListView>
            
        </LinearLayout>

    </LinearLayout>

	
</ScrollView>
		<Button
        android:id="@+id/AddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/ic_menu_add"
         />

		<Button
		    android:id="@+id/SaveAll"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:layout_alignParentBottom="true"
		    android:background="@drawable/next"
		    android:layout_marginRight="10dp"
		    android:layout_marginBottom="5dp"
		    android:scaleY="1.5"
		    android:scaleX="1.5" />

		

</RelativeLayout>

